--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "laravel/musical",
+    "name": "eggplant/musical",
     "description": "laravel demo",
     "type": "php",
     "license": "MIT",
